# omama_cli

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml
src/: config.rs  handle_args.rs  lib.rs  main.rs  ui.rs
wix/: main.wxs
