[package]
name = "omama_cli"
version = "0.1.0"
edition = "2024"
description = "CLI tool used to bridge between the manager and the omama GUI"
repository = "https://github.com/ALAWIII/omama_cli"
authors = ["Allawiii"]
publish = false
[package.metadata.wix]
upgrade-guid = "555A95F5-0B99-4AB5-8CA5-007B6966FBE6"
path-guid = "8C92D4B7-9151-4AE5-8560-E34E476B31C9"
license = false
eula = false

[[bin]]
name = "omama_cli"
path = "src/main.rs"
test = false
bench = false
[package.metadata.dist]
dist = true
[dependencies]
ollama-rs = { version = "0.2.5", features = ["stream"] }
omama_manager = "0.1.0"
anyhow = "1.0.97"
clap = { version = "4.5.35", features = ["cargo"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = "0.1.17"

[profile.release]
panic = "abort"
opt-level = 3
lto = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
