[package]
name = "omama_cli"
version = "0.1.1"
edition = "2024"
description = "CLI tool used to bridge between the manager and the omama GUI"
repository = "https://github.com/ALAWIII/omama_cli"
authors = ["Allawiii"]

license = "MIT OR Apache-2.0"
readme = "README.md"


[dependencies]
ollama-rs = { version = "0.2.5", features = ["stream"] }
omama_manager = "0.1.1"
anyhow = "1.0.97"
clap = { version = "4.5.36", features = ["cargo"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.43.0", features = ["full"] }
tokio-stream = "0.1.17"

[profile.release]
panic = "abort"
opt-level = 3
lto = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
